--- a/kubernetes/clusters/k0s/database/memcached/app/kustomization.yaml
+++ b/kubernetes/clusters/k0s/database/memcached/app/kustomization.yaml
@@ -2,10 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: database
 resources:
-  # Pre Flux-Kustomizations  
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./memcached/ks.yaml
-  - ./redis/ks.yaml
+  - ./helmrelease.yaml
