add memcached for loki

--- a/kubernetes/clusters/k0s/database/memcached/loki-chunk-cache/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/database/memcached/loki-chunk-cache/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: memcached
+  name: memcached-loki-results
   namespace: database
 spec:
   refreshInterval: "30m"
@@ -10,7 +10,7 @@ spec:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: memcached
+    name: memcached-loki-results
     template:
       engineVersion: v2
       data:
