--- a/kubernetes/clusters/k0s/monitoring/loki/app/rules/loki-alerting-rules.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/rules/loki-alerting-rules.yaml
@@ -32,6 +32,7 @@ groups:
       - alert: UnifiSSHAuthEvent
         expr: |
           sum by (app) (count_over_time({app="unifi-auth"} |~ "(?i)session opened"[2m])) > 0
+        for: 2m
         labels:
           severity: info
           category: logs
@@ -44,6 +45,7 @@ groups:
       - alert: UnifiProtectClient
         expr: |
           sum by (app) (count_over_time({app="unifi-protect-clientnotify"} |~ "(?i)userName"[2m])) > 0
+        for: 2m
         labels:
           severity: info
           category: logs
