--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -9,15 +9,15 @@ api:
 #
 
 sources:
-  # journald_source:
-  #   type: vector
-  #   version: "2"
-  #   address: 0.0.0.0:6000
+  journald_source:
+    type: vector
+    version: "2"
+    address: 0.0.0.0:6000
 
-  # kubernetes_source:
-  #   type: vector
-  #   version: "2"
-  #   address: 0.0.0.0:6010
+  kubernetes_source:
+    type: vector
+    version: "2"
+    address: 0.0.0.0:6010
 
   unifi_source:
     type: vector
@@ -29,14 +29,14 @@ sources:
 #
 
 transforms:
-  # kubernetes_remap:
-  #   type: remap
-  #   inputs: ["kubernetes_source"]
-  #   source: |
-  #     # Standardize 'app' index
-  #     .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
-  #     # Drop pod_labels
-  #     del(.pod_labels)
+  kubernetes_remap:
+    type: remap
+    inputs: ["kubernetes_source"]
+    source: |
+      # Standardize 'app' index
+      .custom_app_name = .pod_labels."app.kubernetes.io/name" || .pod_labels.app || .pod_labels."k8s-app" || "unknown"
+      # Drop pod_labels
+      del(.pod_labels)
 
   unifi_route:
     type: route
@@ -75,29 +75,29 @@ transforms:
 #
 
 sinks:
-  # journald:
-  #   inputs: ["journald_source"]
-  #   type: loki
-  #   endpoint: http://loki-gateway.monitoring.svc.cluster.local
-  #   encoding: { codec: json }
-  #   out_of_order_action: accept
-  #   remove_label_fields: true
-  #   remove_timestamp: true
-  #   labels:
-  #     hostname: '{{ host }}'
+  journald:
+    inputs: ["journald_source"]
+    type: loki
+    endpoint: http://loki-gateway.monitoring.svc.cluster.local
+    encoding: { codec: json }
+    out_of_order_action: accept
+    remove_label_fields: true
+    remove_timestamp: true
+    labels:
+      hostname: '{{ host }}'
 
-  # kubernetes:
-  #   inputs: ["kubernetes_remap"]
-  #   type: loki
-  #   endpoint: http://loki-gateway.monitoring.svc.cluster.local
-  #   encoding: { codec: json }
-  #   out_of_order_action: accept
-  #   remove_label_fields: true
-  #   remove_timestamp: true
-  #   labels:
-  #     app: '{{ custom_app_name }}'
-  #     namespace: '{{ kubernetes.pod_namespace }}'
-  #     node: '{{ kubernetes.pod_node_name }}'
+  kubernetes:
+    inputs: ["kubernetes_remap"]
+    type: loki
+    endpoint: http://loki-gateway.monitoring.svc.cluster.local
+    encoding: { codec: json }
+    out_of_order_action: accept
+    remove_label_fields: true
+    remove_timestamp: true
+    labels:
+      app: '{{ custom_app_name }}'
+      namespace: '{{ kubernetes.pod_namespace }}'
+      node: '{{ kubernetes.pod_node_name }}'
 
   unifi:
     inputs: ["unifi_firewall_remap"]
