test sink labels

--- a/kubernetes/clusters/k1s/monitoring/vector/app/agent/resources/vector.yaml
+++ b/kubernetes/clusters/k1s/monitoring/vector/app/agent/resources/vector.yaml
@@ -27,6 +27,8 @@ sinks:
     version: "2"
     address: vector-aggregator.monitoring.svc.cluster.local:6000
     inputs: ["journald_source"]
+    labels:
+      cluster: k1s
 
   kubernetes:
     type: vector
@@ -34,3 +36,5 @@ sinks:
     version: "2"
     address: vector-aggregator.monitoring.svc.cluster.local:6010
     inputs: ["kubernetes_source"]
+    labels:
+      cluster: k1s
