--- a/kubernetes/clusters/k1s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k1s/monitoring/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./kube-prometheus-stack/ks.yaml
-  #- ./vector/ks.yaml
+  - ./vector/ks.yaml
