--- a/kubernetes/clusters/k0s/monitoring/vector/app/agent/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/agent/resources/vector.yaml
@@ -15,6 +15,10 @@ sources:
       pod_labels: pod_labels
       pod_name: pod_name
       pod_annotations: ""
+    namespace_annotation_fields:
+      namespace_labels: ""
+    node_annotation_fields:
+      node_labels: ""
 
 sinks:
   journald:
