--- a/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
       auth.basic:
         enabled: true
       auth.anonymous:
-        enabled: true
+        enabled: false
       auth.ldap:
         enabled: true
         allow_sign_up: true
