drop typesense add grafana pg instance

--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,6 @@ IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
 IMMICH_POSTGRES_USER="xxxxxxxx"
-IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
 
 # secret/monitoring/grafana
 GRAFANA_ADMIN_PASSWORD="xxxxxxxx"
@@ -51,6 +50,10 @@ GRAFANA_ADMIN_USER="xxxxxxxx"
 GRAFANA_LDAP_PASSWORD="xxxxxxxx"
 GRAFANA_LDAP_ROOT="xxxxxxxx"
 GRAFANA_LDAP_USERNAME="xxxxxxxx"
+GRAFANA_POSTGRES_PASSWORD="xxxxxxxx"
+GRAFANA_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+GRAFANA_POSTGRES_SUPER_USER="xxxxxxxx"
+GRAFANA_POSTGRES_USER="xxxxxxxx"
 
 # secret/security/dex
 DEX_GITOPS_CLIENT_SECRET="xxxxxxxx"
