--- a/kubernetes/clusters/k0s/monitoring/grafana/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/ks.yaml
@@ -14,3 +14,19 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-grafana-database
+  namespace: flux-system
+spec:
+  path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/grafana/database
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
