update grafana to use pg db

--- a/kubernetes/clusters/k0s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/externalsecret.yaml
@@ -16,6 +16,8 @@ spec:
       data:
         admin-user: "{{ .GRAFANA_ADMIN_USER }}"
         admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
+        GF_DATABASE_USER: "{{ .GRAFANA_POSTGRES_USER }}"
+        GF_DATABASE_PASSWORD: "{{ .GRAFANA_POSTGRES_PASSWORD }}"
         ldap-toml: |
           verbose_logging = true
           [[servers]]
