--- a/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -28,6 +28,10 @@ spec:
   values:
     replicas: 1
     env:
+      GF_DATABASE_SSL_MODE: disable
+      GF_DATABASE_TYPE: postgres
+      GF_DATABASE_HOST: grafana-rw.monitoring.svc.cluster.local:5432
+      GF_DATABASE_NAME: grafana
       GF_DATE_FORMATS_USE_BROWSER_LOCALE: true
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,vonage-status-panel
@@ -262,3 +266,12 @@ spec:
       enabled: false
     testFramework:
       enabled: false
+  valuesFrom:
+    - targetPath: env.GF_DATABASE_USER
+      kind: Secret
+      name: grafana
+      valuesKey: GF_DATABASE_USER
+    - targetPath: env.GF_DATABASE_PASSWORD
+      kind: Secret
+      name: grafana
+      valuesKey: GF_DATABASE_PASSWORD
