--- a/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -163,143 +163,138 @@ spec:
           gnetId: 15038
           revision: 3
           datasource: Prometheus
-        # minio:
-        #   # renovate: depName="MinIO Dashboard"
-        #   gnetId: 13502
-        #   revision: 24
-        #   datasource:
-        #     - { name: DS_PROMETHEUS, value: Prometheus }
-        # node-exporter-full:
-        #   # renovate: depName="Node Exporter Full"
-        #   gnetId: 1860
-        #   revision: 33
-        #   datasource: Prometheus
-        # redis:
-        #   # renovate: depName="Redis Dashboard for Prometheus Redis Exporter 1.x"
-        #   gnetId: 763
-        #   revision: 5
-        #   datasource: Prometheus
-        # vault:
-        #   gnetId: 12904
-        #   revision: 2
-        #   datasource: Prometheus
-        # cloudnative-pg:
-        #   url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
-        #   datasource: Prometheus
-        # cert-manager:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
-        #   datasource: Prometheus
-        # # external-secrets:
-        # #   url: https://raw.githubusercontent.com/external-secrets/external-secrets/main/docs/snippets/dashboard.json
-        # #   datasource: Prometheus
-        # ceph-cluster:
-        #   # renovate: depName="Ceph Cluster"
-        #   gnetId: 2842
-        #   revision: 17
-        #   datasource: Prometheus
-        # ceph-osd:
-        #   # renovate: depName="Ceph - OSD (Single)"
-        #   gnetId: 5336
-        #   revision: 9
-        #   datasource: Prometheus
-        # ceph-pools:
-        #   # renovate: depName="Ceph - Pools"
-        #   gnetId: 5342
-        #   revision: 9
-        #   datasource: Prometheus
-        # kubernetes-api-server:
-        #   # renovate: depName="Kubernetes / System / API Server"
-        #   gnetId: 15761
-        #   revision: 14
-        #   datasource: Prometheus
-        # kubernetes-coredns:
-        #   # renovate: depName="Kubernetes / System / CoreDNS"
-        #   gnetId: 15762
-        #   revision: 13
-        #   datasource: Prometheus
-        # kubernetes-global:
-        #   # renovate: depName="Kubernetes / Views / Global"
-        #   gnetId: 15757
-        #   revision: 31
-        #   datasource: Prometheus
-        # kubernetes-namespaces:
-        #   # renovate: depName="Kubernetes / Views / Namespaces"
-        #   gnetId: 15758
-        #   revision: 27
-        #   datasource: Prometheus
-        # kubernetes-nodes:
-        #   # renovate: depName="Kubernetes / Views / Nodes"
-        #   gnetId: 15759
-        #   revision: 19
-        #   datasource: Prometheus
-        # kubernetes-pods:
-        #   # renovate: depName="Kubernetes / Views / Pods"
-        #   gNetId: 15760
-        #   revision: 21
-        #   datasource: Prometheus
-        # kubernetes-volumes:
-        #   # renovate: depName="K8s / Storage / Volumes / Cluster"
-        #   gnetId: 11454
-        #   revision: 14
-        #   datasource: Prometheus
-        # memcached:
-        #   # renovate: depName="Memcached"
-        #   gnetId: 3063
-        #   revision: 1
-        #   datasource: Prometheus
-        # nginx:
-        #   url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/grafana/dashboards/nginx.json
-        #   datasource: Prometheus
-        # nginx-request-handling-performance:
-        #   url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/grafana/dashboards/request-handling-performance.json
-        #   datasource: Prometheus
-        # thanos-bucket-replicate:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/bucket-replicate.json
-        #   datasource: Prometheus
-        # thanos-compact:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/compact.json
-        #   datasource: Prometheus
-        # thanos-overview:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/overview.json
-        #   datasource: Prometheus
-        # thanos-query:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/query.json
-        #   datasource: Prometheus
-        # thanos-query-frontend:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/query-frontend.json
-        #   datasource: Prometheus
-        # thanos-receieve:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/receive.json
-        #   datasource: Prometheus
-        # thanos-rule:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/rule.json
-        #   datasource: Prometheus
-        # thanos-sidecar:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/sidecar.json
-        #   datasource: Prometheus
-        # thanos-store:
-        #   url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/store.json
-        #   datasource: Prometheus
-        # unifi-insights:
-        #   # renovate: depName="UniFi-Poller: Client Insights - Prometheus"
-        #   gnetId: 11315
-        #   revision: 9
-        #   datasource: Prometheus
-        # unifi-network-sites:
-        #   # renovate: depName="UniFi-Poller: Network Sites - Prometheus"
-        #   gnetId: 11311
-        #   revision: 5
-        #   datasource: Prometheus
-        # unifi-uap:
-        #   # renovate: depName="UniFi-Poller: UAP Insights - Prometheus"
-        #   gnetId: 11314
-        #   revision: 10
-        #   datasource: Prometheus
-        # unifi-usw:
-        #   # renovate: depName="UniFi-Poller: USW Insights - Prometheus"
-        #   gnetId: 11312
-        #   revision: 9
-        #   datasource: Prometheus
+        minio:
+          # renovate: depName="MinIO Dashboard"
+          gnetId: 13502
+          revision: 24
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
+        node-exporter-full:
+          # renovate: depName="Node Exporter Full"
+          gnetId: 1860
+          revision: 33
+          datasource: Prometheus
+        redis:
+          # renovate: depName="Redis Dashboard for Prometheus Redis Exporter 1.x"
+          gnetId: 763
+          revision: 5
+          datasource: Prometheus
+        vault:
+          gnetId: 12904
+          revision: 2
+          datasource: Prometheus
+        cloudnative-pg:
+          url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
+          datasource: Prometheus
+        cert-manager:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
+          datasource: Prometheus
+        external-secrets:
+          url: https://raw.githubusercontent.com/external-secrets/external-secrets/main/docs/snippets/dashboard.json
+          datasource: Prometheus
+        ceph-cluster:
+          # renovate: depName="Ceph Cluster"
+          gnetId: 2842
+          revision: 17
+          datasource: Prometheus
+        ceph-osd:
+          # renovate: depName="Ceph - OSD (Single)"
+          gnetId: 5336
+          revision: 9
+          datasource: Prometheus
+        ceph-pools:
+          # renovate: depName="Ceph - Pools"
+          gnetId: 5342
+          revision: 9
+          datasource: Prometheus
+        kubernetes-api-server:
+          # renovate: depName="Kubernetes / System / API Server"
+          gnetId: 15761
+          revision: 14
+          datasource: Prometheus
+        kubernetes-coredns:
+          # renovate: depName="Kubernetes / System / CoreDNS"
+          gnetId: 15762
+          revision: 13
+          datasource: Prometheus
+        kubernetes-global:
+          # renovate: depName="Kubernetes / Views / Global"
+          gnetId: 15757
+          revision: 31
+          datasource: Prometheus
+        kubernetes-namespaces:
+          # renovate: depName="Kubernetes / Views / Namespaces"
+          gnetId: 15758
+          revision: 27
+          datasource: Prometheus
+        kubernetes-nodes:
+          # renovate: depName="Kubernetes / Views / Nodes"
+          gnetId: 15759
+          revision: 19
+          datasource: Prometheus
+        kubernetes-pods:
+          # renovate: depName="Kubernetes / Views / Pods"
+          gNetId: 15760
+          revision: 21
+          datasource: Prometheus
+        kubernetes-volumes:
+          # renovate: depName="K8s / Storage / Volumes / Cluster"
+          gnetId: 11454
+          revision: 14
+          datasource: Prometheus
+        nginx:
+          url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/grafana/dashboards/nginx.json
+          datasource: Prometheus
+        nginx-request-handling-performance:
+          url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/grafana/dashboards/request-handling-performance.json
+          datasource: Prometheus
+        thanos-bucket-replicate:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/bucket-replicate.json
+          datasource: Prometheus
+        thanos-compact:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/compact.json
+          datasource: Prometheus
+        thanos-overview:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/overview.json
+          datasource: Prometheus
+        thanos-query:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/query.json
+          datasource: Prometheus
+        thanos-query-frontend:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/query-frontend.json
+          datasource: Prometheus
+        thanos-receieve:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/receive.json
+          datasource: Prometheus
+        thanos-rule:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/rule.json
+          datasource: Prometheus
+        thanos-sidecar:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/sidecar.json
+          datasource: Prometheus
+        thanos-store:
+          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/store.json
+          datasource: Prometheus
+        unifi-insights:
+          # renovate: depName="UniFi-Poller: Client Insights - Prometheus"
+          gnetId: 11315
+          revision: 9
+          datasource: Prometheus
+        unifi-network-sites:
+          # renovate: depName="UniFi-Poller: Network Sites - Prometheus"
+          gnetId: 11311
+          revision: 5
+          datasource: Prometheus
+        unifi-uap:
+          # renovate: depName="UniFi-Poller: UAP Insights - Prometheus"
+          gnetId: 11314
+          revision: 10
+          datasource: Prometheus
+        unifi-usw:
+          # renovate: depName="UniFi-Poller: USW Insights - Prometheus"
+          gnetId: 11312
+          revision: 9
+          datasource: Prometheus
     sidecar:
       dashboards:
         enabled: true
