add aggregator debug logs

--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -45,6 +45,8 @@ spec:
               labelSelector:
                 matchLabels:
                   app.kubernetes.io/name: *app
+        env:
+          VECTOR_LOG: debug
     service:
       main:
         type: LoadBalancer
