--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -37,8 +37,8 @@ spec:
               repository: docker.io/timberio/vector
               tag: 0.34.2-debian@sha256:36b975dd3e4a6793b61077fc4ffeb0b9d361b6a028eec27786588d229bc66dac
             args: ["--config", "/etc/vector/vector.yaml"]
-            env:
-              VECTOR_LOG: debug
+            # env:
+            #   VECTOR_LOG: debug
         pod:
           topologySpreadConstraints:
             - maxSkew: 1
