--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./influxdata.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
+  - ./kubeshark.yaml
   - ./kyverno.yaml
   - ./metrics-server.yaml
   - ./minio.yaml
