--- a/kubernetes/clusters/k0s/kube-system/tetragon/policies/kustomization.yaml
+++ b/kubernetes/clusters/k0s/kube-system/tetragon/policies/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./database.yaml
-  - ./rook-ceph.yaml
-  - ./ingress.yaml
+  #- ./rook-ceph.yaml
+  #- ./ingress.yaml
