--- a/kubernetes/clusters/k0s/kube-system/tetragon/policies/kustomization.yaml
+++ b/kubernetes/clusters/k0s/kube-system/tetragon/policies/kustomization.yaml
@@ -3,6 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  #- ./database.yaml
+  - ./database.yaml
   #- ./rook-ceph.yaml
   #- ./ingress.yaml
