--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -21,7 +21,7 @@ spec:
     #   secret:
     #     name: immich-database-user
     recovery:
-      source: &previousCluster immich-db-1
+      source: &previousCluster immich-2
   storage:
     size: 5Gi
     storageClass: local-path
@@ -51,7 +51,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://immich
       endpointURL: "https://minio.logfold.com"
-      serverName: &currentCluster immich-2
+      serverName: &currentCluster immich-3
       s3Credentials:
         accessKeyId:
           name: immich-database-superuser
