--- a/kubernetes/clusters/k2s/home-automation/zwave-js-ui/ks.yaml
+++ b/kubernetes/clusters/k2s/home-automation/zwave-js-ui/ks.yaml
@@ -6,8 +6,26 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: shared-apps-node-feature-rules
+    - name: cluster-apps-zwave-js-ui-usb
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/zwave-js-ui/app
+  prune: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-zwave-js-ui-usb
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: shared-apps-node-feature-rules
+  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/zwave-js-ui/usb
   prune: false
   sourceRef:
     kind: GitRepository
