--- a/kubernetes/clusters/k2s/home-automation/ser2net/ks.yaml
+++ b/kubernetes/clusters/k2s/home-automation/ser2net/ks.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-zwave-js-ui
+  name: ser2net
   namespace: flux-system
 spec:
   dependsOn:
-    - name: ser2net
-  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/zwave-js-ui/app
+    - name: shared-apps-node-feature-rules
+  path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/ser2net/app
   prune: false
   sourceRef:
     kind: GitRepository
@@ -16,4 +16,3 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
-
