--- a/kubernetes/clusters/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   # Flux-Kustomizations
   - ./esphome/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./ser2net/ks.yaml
   - ./tidbyt-proxy/ks.yaml
   - ./unifi-downloader/ks.yaml
   - ./zwave-js-ui/ks.yaml
