--- a/kubernetes/clusters/k2s/home-automation/ser2net/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/ser2net/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         containers:
           main:
             command: ["socat"]
-            args: ["/dev/zwave,b115200,rawer,echo=0", "tcp-listen:3333,reuseaddr"]
+            args: ["/dev/zwave,b115200,rawer,echo=0", "tcp-listen:3333,reuseaddr,su=nobody"]
             securityContext:
               privileged: true
               fsGroup: 0
