--- a/kubernetes/clusters/k2s/home-automation/ser2net/app/configmap.yaml
+++ b/kubernetes/clusters/k2s/home-automation/ser2net/app/configmap.yaml
@@ -8,3 +8,4 @@ data:
   ser2net.conf: |    
     BANNER:banner:\r\nser2net port \p device \d [\s] (Debian GNU/Linux)\r\n\r\n
     3333:raw:0:/dev/zwave:115200 8DATABITS NONE 1STOPBIT
+    3334:raw:0:/dev/zigbee:115200 8DATABITS NONE 1STOPBIT
