--- a/kubernetes/clusters/k2s/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/ks.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-home-automation-home-assistant-database
+    - name: ser2net
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/home-assistant/app
   prune: false
   sourceRef:
