--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
@@ -97,3 +97,6 @@ spec:
         tls:
           - hosts:
               - *host
+    serviceAccount:
+      create: true
+      name: home-assistant
