--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/helmrelease.yaml
@@ -31,23 +31,10 @@ spec:
   values:
     controllers:
       main:
-        type: statefulset
-        statefulset:
-          volumeClaimTemplates:
-            - name: config
-              globalMounts:
-                - path: /config
-              accessMode: ReadWriteOnce
-              size: 5Gi
-              storageClass: ceph-pool
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           main:
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
             image:
               repository: ghcr.io/onedr0p/home-assistant
               tag: 2024.1.3
@@ -64,10 +51,13 @@ spec:
                 enabled: false
               startup:
                 enabled: false
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
-                memory: 128Mi
               limits:
                 memory: 1Gi
         pod:
@@ -101,5 +91,8 @@ spec:
       create: true
       name: home-assistant
     persistence:
+      config:
+        enabled: true
+        existingClaim: home-assistant
       tmp:
         type: emptyDir
