--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/volsync.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/volsync.yaml
@@ -28,7 +28,7 @@ metadata:
   name: home-assistant
   namespace: home-automation
 spec:
-  sourcePVC: config-home-assistant-0
+  sourcePVC: home-assistant
   trigger:
     schedule: "0 7 * * *"
   restic:
