--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: home-automation
 resources:
   - ./externalsecret.yaml
+  - ./persistentvolumeclaim.yaml
   - ./configmap.yaml
   - ./helmrelease.yaml
   - ./volsync.yaml
