--- a/kubernetes/clusters/k2s/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -27,12 +27,17 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    csi:
+      provisioner:
+        image: registry.k8s.io/sig-storage/csi-provisioner:v3.6.3
+      cephFSKernelMountOptions: ms_mode=prefer-crc
+      enableLiveness: true
+      serviceMonitor:
+        enabled: true
     monitoring:
       enabled: true
     resources:
-      limits:
-        cpu: 1500m
-        memory: 512Mi
       requests:
-        cpu: 200m
-        memory: 256Mi
+        memory: 128Mi
+        cpu: 100m
+      limits: {}
