--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/volsync.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/volsync.yaml
@@ -39,6 +39,10 @@ spec:
     cacheStorageClassName: local-path
     volumeSnapshotClassName: csi-ceph-blockpool
     storageClassName: ceph-pool
+    moverSecurityContext:
+      runAsUser: 568
+      runAsGroup: 568
+      fsGroup: 568
     retain:
       daily: 7
       within: 3d
