--- a/.taskfiles/volsync/ReplicationDestination.tmpl.yaml
+++ b/.taskfiles/volsync/ReplicationDestination.tmpl.yaml
@@ -24,3 +24,7 @@ spec:
     #   Do not restore snapshots made after the following RFC3339 Timestamp.
     #   date --rfc-3339=seconds (--utc)
     # restoreAsOf: "2022-12-10T16:00:00-05:00"
+    moverSecurityContext:
+      runAsUser: ${puid}
+      runAsGroup: ${pgid}
+      fsGroup: ${pgid}
