--- a/kubernetes/clusters/k2s/volsync/volsync/app/helmrelease.yaml
+++ b/kubernetes/clusters/k2s/volsync/volsync/app/helmrelease.yaml
@@ -27,10 +27,11 @@ spec:
     keepHistory: false
   values:
     manageCRDs: true
-    image: &image
-      repository: ghcr.io/onedr0p/volsync
-      tag: 0.8.0
+    image:
+      repository: &image ghcr.io/onedr0p/volsync
+      tag: &tag 0.8.0
     restic:
-      <<: *image
+      repository: *image
+      tag: *tag
     metrics:
       disableAuth: true
