--- a/kubernetes/clusters/shared/volsync/volsync/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/volsync/volsync/app/helmrelease.yaml
@@ -27,25 +27,11 @@ spec:
     keepHistory: false
   values:
     manageCRDs: true
+    image:
+      repository: &image ghcr.io/onedr0p/volsync
+      tag: &tag 0.8.0
+    restic:
+      repository: *image
+      tag: *tag
     metrics:
       disableAuth: true
-  postRenderers:
-    - kustomize:
-        patchesStrategicMerge:
-          - apiVersion: apps/v1
-            kind: Deployment
-            metadata:
-              name: volsync
-            spec:
-              template:
-                spec:
-                  containers:
-                    - name: manager
-                      volumeMounts:
-                        - name: tz-config
-                          mountPath: /etc/localtime
-                  volumes:
-                    - name: tz-config
-                      hostPath:
-                        path: /usr/share/zoneinfo/America/New_York
-                        type: File
