--- a/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
           main:
             image:
               repository: quay.io/minio/minio
-              tag: RELEASE.2023-11-20T22-40-07Z
+              tag: RELEASE.2023-12-14T18-51-57Z@sha256:62bffc26326ee5c841d7774b1c94712953d315ee5ca603c124206cabc77681d5
             env:
               MINIO_API_CORS_ALLOW_ORIGIN: "https://minio-console.${DOMAIN}"
               MINIO_BROWSER_REDIRECT_URL: "https://minio-console.${DOMAIN}"
