--- a/kubernetes/clusters/k0s/security/kustomization.yaml
+++ b/kubernetes/clusters/k0s/security/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
+  - ./atuin/ks.yaml
   - ./oauth2-proxy/ks.yaml
   - ./lldap/ks.yaml
   - ./dex/ks.yaml
